--- a/Jenkins/JenkinsFile
+++ b/Jenkins/JenkinsFile
@@ -90,4 +90,12 @@ pipeline {
         }
     } */
   }
+  post {
+      always {
+        junit(
+          allowEmptyResults: true,
+          testResults: '**/test-reports/*.xml'
+    )
+  }
+
 }
