--- a/Jenkins/JenkinsFile
+++ b/Jenkins/JenkinsFile
@@ -94,7 +94,7 @@ pipeline {
       always {
         junit(
           allowEmptyResults: true,
-          testResults: '**/test-reports/*.xml'
+          testResults: 'target/surefire-reports/*.xml'
         )
       }
   }
